cabal-version:  2.2
name:           aoc2020
version:        0.1.0.0
author:         Maciej Goszczycki
maintainer:     mgoszcz2@gmail.com
build-type:     Simple

library advent
  hs-source-dirs:     advent
  exposed-modules:    Advent
  build-depends:      base ^>= 4.13,
                      megaparsec ^>= 9.0,
                      containers ^>= 0.6,
  default-language:   Haskell2010

common day
  default-language:   Haskell2010
  build-depends:      base ^>= 4.13,
                      advent,

executable day01
  import:         day
  main-is:        Day01.hs

executable day02
  import:         day
  main-is:        Day02.hs

executable day03
  import:         day
  main-is:        Day03.hs

executable day04
  import:         day
  main-is:        Day04.hs

executable day05
  import:         day
  main-is:        Day05.hs

executable day06
  import:         day
  main-is:        Day06.hs

executable day07
  import:         day
  main-is:        Day07.hs
  build-depends:  containers,

executable day08
  import:         day
  main-is:        Day08.hs
  build-depends:  containers ^>= 0.6,

executable day09
  import:         day
  main-is:        Day09.hs

executable day10
  import:         day
  main-is:        Day10.hs

executable day11
  import:         day
  main-is:        Day11.hs
  build-depends:  containers ^>= 0.6,

executable day12
  import:         day
  main-is:        Day12.hs

executable day13
  import:         day
  main-is:        Day13.hs

executable day14
  import:         day
  main-is:        Day14.hs
  build-depends:  containers ^>= 0.6,

executable day15
  import:         day
  main-is:        Day15.hs
  build-depends:  containers ^>= 0.6,

executable day16
  import:         day
  main-is:        Day16.hs
  build-depends:  containers ^>= 0.6,

executable day17
  import:         day
  main-is:        Day17.hs
  build-depends:  containers ^>= 0.6,

executable day18
  import:         day
  main-is:        Day18.hs

executable day19
  import:         day
  main-is:        Day19.hs
  build-depends:  containers ^>= 0.6,

executable day21
  import:         day
  main-is:        Day21.hs
  build-depends:  containers ^>= 0.6,

executable day22
  import:         day
  main-is:        Day22.hs
  build-depends:  containers ^>= 0.6,

-- Structure inspired by glguy/advent2019