[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aoclib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "runaoc"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
itertools = "0.10.1"
pico-args = { version = "0.4.2", default-features = false, features = ["combined-flags"] }
owo-colors = "3.1.0"
wasm-bindgen = "0.2"

[profile.release]
lto = true
panic = "abort"